@@ -1,7 +1,7 @@
 /**************************************************************************
  * examples/ostest/mqueue.c
  *
- *   Copyright (C) 2007, 2008 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007-2009 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -336,7 +336,7 @@ void timedmqueue_test(void)
       printf("timedmqueue_test: pthread_attr_init failed, status=%d\n", status);
     }
 
-  status = pthread_attr_setstacksize(&attr, 16384);
+  status = pthread_attr_setstacksize(&attr, STACKSIZE);
   if (status != 0)
     {
       printf("timedmqueue_test: pthread_attr_setstacksize failed, status=%d\n", status);
@@ -366,7 +366,7 @@ void timedmqueue_test(void)
       printf("timedmqueue_test: pthread_attr_init failed, status=%d\n", status);
     }
 
-  status = pthread_attr_setstacksize(&attr, 16384);
+  status = pthread_attr_setstacksize(&attr, STACKSIZE);
   if (status != 0)
     {
       printf("timedmqueue_test: pthread_attr_setstacksize failed, status=%d\n", status);
